--- a/index.html
+++ b/index.html
@@ -2,16 +2,25 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>learndathistory</title>
+        <title>LearnHistory.com</title>
+        <style>
+            nav a{
+                background-color: red;
+                color: white;
+                width: 100%;
+                height: 20px;
+                position: fixed;
+            }
+        </style>
     </head>
     <body>
-    <h1>Welcome to Learndathitory.com!</h1>
-    <h2>I'm Henry. I'm currently ten years old, and a history nerd. I'm hear to teach you about well, history!</h2>
-    <h2>Contents</h2>
-    <h4>
-      WWII<br>
-      WWI
-    </h4>
+        <nav>
+            
+        </nav>
+    <h1>Welcome to learnhitory.com!</h1>
+    <h2>I'm Henry. I'm currently ten years old, and a I'm history nerd, among other things. I'm here to teach you about, well, <strong>history!</strong></h2>
+        <div style="background-color: yellow; color: black; width: 50px; height: 80px; border: red 5px solid;"><h1>SITE UNDER CONSTRUCTION!</div>
+    
 
 
     </body>
