--- a/index.html
+++ b/index.html
@@ -4,22 +4,65 @@
         <meta charset="utf-8">
         <title>LearnHistory.com</title>
         <style>
-            nav a{
-                background-color: red;
+        	a {
+            	text-decoration: none;
+                }
+            body {
+                z-index: 0;
+                background-color: rgb(250, 147, 140);
+                color: white;
+                font-family: sans-serif;
+            }
+            nav {
+                background-color: rgb(145, 19, 10);
                 color: white;
                 width: 100%;
-                height: 20px;
+                height: 50px;
                 position: fixed;
+                z-index: 1 !important;
+                font-size: x-large;
+            }
+            a span{
+                background-color: rgb(145, 19, 10);
+                color: white;
+                width: 20%;
+                height: 50px;
+                z-index: 2 !important;
+                margin: none;
+            }
+            a span:hover {
+                background-color: white;
+                color: orange;
+                width: 20%;
+                height: 50px;
+                z-index: 2 !important;
+                margin: none;
             }
         </style>
     </head>
     <body>
         <nav>
-            
+            <p style="font-size: auto;">
+                <a href="ww1.html">
+                    <span>WWI</span>
+                </a>
+                <a href="ww2.html">
+                    <span>WWII</span>
+                </a>
+                <a href="monthly-story.html">
+                    <span>Monthly story</span>
+                </a>
+                <a href="other.html">
+                    <span>Other</span>
+                </a>
+                <a href="flags.html">
+                    <span>Historical Flags</span>
+                </a>
+            </p>
         </nav>
     <h1>Welcome to learnhitory.com!</h1>
     <h2>I'm Henry. I'm currently ten years old, and a I'm history nerd, among other things. I'm here to teach you about, well, <strong>history!</strong></h2>
-        <div style="background-color: yellow; color: black; width: 50px; height: 80px; border: red 5px solid;"><h1>SITE UNDER CONSTRUCTION!</div>
+        <div style="background-color: yellow; color: black; width: 300px; height: 150px; border: red 5px solid;"><h1>SITE UNDER CONSTRUCTION!</div>
     
 
 
