--- a/index.html
+++ b/index.html
@@ -1,48 +1,15 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>LearnHistory.com</title>
-        <style>
-        	a {
-            	text-decoration: none;
-                }
-            body {
-                z-index: 0;
-                background-color: rgb(250, 147, 140);
-                color: white;
-                font-family: sans-serif;
-            }
-            nav {
-                background-color: rgb(145, 19, 10);
-                color: white;
-                width: 100%;
-                height: 50px;
-                position: fixed;
-                z-index: 1 !important;
-                font-size: x-large;
-            }
-            a span{
-                background-color: rgb(145, 19, 10);
-                color: white;
-                width: 20%;
-                height: 50px;
-                z-index: 2 !important;
-                margin: none;
-            }
-            a span:hover {
-                background-color: white;
-                color: orange;
-                width: 20%;
-                height: 50px;
-                z-index: 2 !important;
-                margin: none;
+
+Result Size: 619 x 362
+28
+                text-align: center;
+                margin-left: 28%;
+                margin-right: 30%
             }
         </style>
     </head>
     <body>
         <nav>
-            <p style="font-size: auto;">
+            <p>
                 <a href="ww1.html">
                     <span>WWI</span>
                 </a>
@@ -60,11 +27,12 @@
                 </a>
             </p>
         </nav>
-    <h1>Welcome to learnhitory.com!</h1>
-    <h2>I'm Henry. I'm currently ten years old, and a I'm history nerd, among other things. I'm here to teach you about, well, <strong>history!</strong></h2>
-        <div style="background-color: yellow; color: black; width: 300px; height: 150px; border: red 5px solid;"><h1>SITE UNDER CONSTRUCTION!</div>
     
-
-
+    <h1 id="welcome"><br>Welcome to learnhistory.com!</h1>
+    <h2>I'm Henry. I'm currently ten years old, and a I'm history nerd, among other things. I'm here to teach you about, well, <strong>history!</strong></h2>
+        <div id="warning"><h1>SITE UNDER CONSTRUCTION!</h1></div><br>
+    
+​
+​
     </body>
 </html>
