--- a/index.html
+++ b/index.html
@@ -1,6 +1,54 @@
-
-Result Size: 619 x 362
-28
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>LearnHistory.com</title>
+        <style>
+            body {
+            	padding: none;
+                z-index: 0;
+                background-color: rgb(250, 147, 140);
+                color: white;
+                font-family: sans-serif;
+            }
+            nav {
+                background-color: rgb(145, 19, 10);
+                color: white;
+                width: 100%;
+                height: 50px;
+                position: fixed;
+                z-index: 1 !important;
+                font-size: large;
+                margin-left: -9.5px;
+                margin-top: -30px;
+                text-align: center;
+            }
+            nav a{
+                background-color: rgb(145, 19, 10);
+                color: white;
+                margin: 1% to 5%;
+                padding: 1%;
+                z-index: 2 !important;
+                border-radius: 4%;
+                text-decoration: none
+            }
+            nav a:hover {
+                background-color: white;
+                color: orange;
+                width: 20%;
+                height: 50px;
+                z-index: 2 !important;
+                margin: none;
+            }
+            #welcome {
+            	padding-top: 5px;
+            }
+            #warning {
+            	background-color: yellow; 
+                color: black; 
+                width: 300px; 
+                height: 150px; 
+                border: red 5px solid;
                 text-align: center;
                 margin-left: 28%;
                 margin-right: 30%
@@ -32,7 +80,7 @@ Result Size: 619 x 362
     <h2>I'm Henry. I'm currently ten years old, and a I'm history nerd, among other things. I'm here to teach you about, well, <strong>history!</strong></h2>
         <div id="warning"><h1>SITE UNDER CONSTRUCTION!</h1></div><br>
     
-​
-​
+
+
     </body>
 </html>
