--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 margin-left: 28%;
                 margin-right: 30%
             }
+            h1, h2, h3, h4, h5, h6 {
+            	text-decoration: none;
+            }
         </style>
     </head>
     <body>
