--- a/index.html
+++ b/index.html
@@ -5,24 +5,89 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>LearnSomeHistory.com</title>
         <link href="index.css" rel="stylesheet">
+        <style>
+            
+            body {
+                padding: none;
+                z-index: 0;
+                background-color: rgb(250, 147, 140);
+                color: white;
+                font-family: sans-serif;
+                margin: none;
+            }
+            nav {
+               background-color: rgb(145, 19, 10);
+               color: white;
+               width: 100%;
+               height: 50px;
+               position: fixed;
+               z-index: 1 !important;
+               margin-left: -9.5px;
+               margin-top: -30px;
+               text-align: center;
+               float: left;
+               font-size: 10%;
+            }
+            nav a{
+                background-color: rgb(145, 19, 10);
+                color: white;
+                margin: 1% to 5%;
+                padding: 1%;
+                z-index: 2 !important;
+                border-radius: 4%;
+                text-decoration: none;
+                float: left;
+            }
+            nav a:hover {
+                background-color: white;
+                color: orange;
+                width: 20%;
+                height: 50px;
+                z-index: 2 !important;
+                margin: none;
+            }
+            nav a:active {
+                background-color: white;
+                color: orange;
+                width: 20%;
+                height: 50px;
+                z-index: 2 !important;
+                margin: none;
+            #welcome {
+                padding-top: 5px;
+            }
+            #warning {
+                background-color: yellow; 
+                color: black; 
+                width: 300px; 
+                height: 150px; 
+                border: red 5px solid;
+                text-align: center;
+                margin-left: 28%;
+                margin-right: 30%;
+            }
+            h1, h2, h3, h4, h5, h6 {
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
         <nav>
             <p>
                 <a href="ww1.html">
-                    <span>WWI</span>
+                    <span><h1>WWI</h1></span>
                 </a>
                 <a href="ww2.html">
-                    <span>WWII</span>
+                    <span><h1>WWII</h1></span>
                 </a>
                 <a href="monthly-story.html">
-                    <span>Monthly story</span>
+                    <span><h1>Monthly story</h1></span>
                 </a>
                 <a href="other.html">
-                    <span>Other</span>
+                    <span><h1>Other</h1></span>
                 </a>
                 <a href="flags.html">
-                    <span>Historical Flags</span>
+                    <span><h1>Historical Flags</h1></span>
                 </a>
             </p>
         </nav>
